--- a/physics.css
+++ b/physics.css
@@ -3,6 +3,12 @@ html, body {
     font-family: 'Play', sans-serif;
     margin: 0;
 }
+
+svg {
+    width: 100%;
+    height: 100%;
+}
+
 .stats {
     position: absolute;
     right: 20px;
